# TextExtractionTest

./: .gitignore  README.md  conftest.py  extract_requirements.py  pyproject.toml  pytest.ini  regulations.txt  requirements.txt  setup.cfg  setup.py
src/: __init__.py  config.py  constants.py  exceptions.py  llm_client.py  patterns.py  spacy_analyzer.py  text_analyzer.py  text_processor.py  tokenization.py
src/llm/: __init__.py  anthropic_client.py  base_client.py  openai_client.py
tests/: conftest.py  test_text_analyzer.py
